samples/_failures_safe/1761470179_d62ce8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4b5c9a5a.c: In function ‘tokenize_string’:
./samples/SAFE/__tmp_4b5c9a5a.c:154:13: error: expected expression at end of input
  154 |             token.value[MAX_TOKEN_LEN -
      |             ^~~~~
./samples/SAFE/__tmp_4b5c9a5a.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4b5c9a5a.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4b5c9a5a.c:154:13: error: expected declaration or statement at end of input
